[package]
name = "todo_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0"
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0.64"
dirs = "3.0.2"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
clap = "2.33.3"
